# agentic-rag

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: expenses.md  onboarding.md  remote-work.md  security.md
eval/: eval_set.yaml  run_eval.py
src/agentic_rag/: __init__.py  chunking.py  cli.py  config.py  embeddings.py  graph.py  ingest.py  llm.py  models.py  nodes.py  prompts.py  state.py
src/agentic_rag/vectorstore/: __init__.py  base.py  chroma_store.py  pgvector_store.py
tests/: conftest.py  openai_fakes.py  test_chunking.py  test_config.py  test_embeddings.py  test_eval.py  test_factory.py  test_graph.py  test_ingest.py  test_llm.py  test_nodes.py  test_prompts.py  test_routing.py  test_vectorstore.py
