[project]
name = "agentic-rag"
version = "0.1.0"
description = "Agentic RAG with grounded citations, no-data handling and an offline eval harness. LangGraph orchestration, pluggable vector store (Chroma / pgvector)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.0",
    "openai>=1.40.0",
    "chromadb>=0.5.0",
    "psycopg[binary]>=3.2.0",
    "pgvector>=0.3.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6.0", "mypy>=1.11", "types-PyYAML>=6.0"]

[project.scripts]
agentic-rag = "agentic_rag.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_rag"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "eval"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests", "eval"]

[[tool.mypy.overrides]]
module = ["chromadb.*", "pgvector.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "eval"]
addopts = "-q"
